--- a/src/com/mamer/banking/view/checkout.fxml
+++ b/src/com/mamer/banking/view/checkout.fxml
@@ -1,10 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mamer.banking.controller.Checkout">
-   <Label layoutX="14.0" layoutY="14.0" text="Checkout"/>
-</AnchorPane>
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mamer.banking.controller.Checkout">
+   <columnConstraints>
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints maxHeight="400.8" minHeight="10.0" prefHeight="341.8" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="195.4" minHeight="0.0" prefHeight="57.80000000000001" vgrow="SOMETIMES" />
+   </rowConstraints>
+   <VBox fx:id="vbox" prefHeight="332.0" prefWidth="300.0">
+      <GridPane.margin>
+         <Insets />
+      </GridPane.margin>
+      <padding>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </padding>
+      <Label prefHeight="18.0" prefWidth="196.0" text="List Produk" />
+   </VBox>
+   <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.columnIndex="1">
+      <padding>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </padding>
+      <Label prefHeight="18.0" prefWidth="202.0" text="Metode Pembayaran dan pengiriman" />
+      <Label text="Alamat Pengiriman" />
+      <TextArea prefHeight="60.0" prefWidth="211.0" />
+      <VBox prefHeight="65.0" prefWidth="290.0" spacing="5.0">
+         <Label text="Pengiriman" />
+         <ChoiceBox fx:id="deliveryChoice" prefHeight="26.0" prefWidth="188.0" />
+         <Label text="Metode Pembayaran" />
+         <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+            <CheckBox mnemonicParsing="false" text="OVO" />
+            <CheckBox mnemonicParsing="false" text="DANA" />
+            <CheckBox mnemonicParsing="false" text="GOPAY" />
+         </HBox>
+      </VBox>
+   </VBox>
+   <VBox alignment="BOTTOM_LEFT" prefHeight="12.0" prefWidth="290.0" spacing="5.0" GridPane.rowIndex="1">
+      <GridPane.margin>
+         <Insets bottom="50.0" left="5.0" right="5.0" top="5.0" />
+      </GridPane.margin>
+      <children>
+         <Label text="Total">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font>
+         </Label>
+         <Label text="Rp10000">
+            <font>
+               <Font name="System Bold" size="14.0" />
+            </font>
+         </Label>
+      </children>
+   </VBox>
+   <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <children>
+         <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="299.0" text="Bayar">
+            <VBox.margin>
+               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            </VBox.margin></Button>
+      </children>
+   </VBox>
+</GridPane>
